--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,9 +12,9 @@ on:
 
 env:
   LIB_VERSION: '2024.1.2'
-  PYTHON_VERSION: '3.11.7'
+  PYTHON_VERSION: '3.11.9'
   CIBW_VERSION: '2.21.3'
-  CIBW_BUILD: 'cp311-*'
+  CIBW_BUILD: 'cp311-* cp312-*'
   CIBW_SKIP: '*-musllinux_*'
   CIBW_BUILD_VERBOSITY: 1
 
@@ -94,6 +94,7 @@ jobs:
     name: 'Build wheels for macOS'
     runs-on: macos-13
     strategy:
+      fail-fast: false
       matrix:
         arch: [arm64, x86_64, universal2]
     needs: [build_macos_openssl_universal2]
@@ -119,7 +120,7 @@ jobs:
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
           CIBW_ARCHS_MACOS: ${{ matrix.arch }}
-          CIBW_BEFORE_BUILD_MACOS: ./build.sh
+          CIBW_BEFORE_ALL_MACOS: ./build.sh
       - uses: actions/upload-artifact@v4
         with:
           name: pypi-wheels-macos-${{ matrix.arch }}
@@ -129,6 +130,7 @@ jobs:
     name: 'Build wheels for Linux'
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         arch: [ aarch64, native ]
     steps:
@@ -153,7 +155,7 @@ jobs:
         working-directory: build
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BEFORE_BUILD_LINUX: ./build.sh
+          CIBW_BEFORE_ALL_LINUX: ./build.sh
           CIBW_ARCHS_LINUX: ${{ matrix.arch }}
       - uses: actions/upload-artifact@v4
         with:
@@ -180,7 +182,7 @@ jobs:
         working-directory: build
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-          CIBW_BEFORE_BUILD: Powershell.exe -F ./build.ps1
+          CIBW_BEFORE_ALL_WINDOWS: Powershell.exe -F ./build.ps1
           CIBW_ARCHS_WINDOWS: "native"
       - name: clean openssl conf
         shell: pwsh
